# pip-template

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst
