[metadata]
name = your_package
version = 0.0.1a1
author = Your Name
author_email = my@email.de
description = your_package is a package for ...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xxx/your_package

project_urls =
    Bug Tracker = https://github.com/marcjulianschwarz/your_package/issues
    Docs = https://github.com/marcjulianschwarz/your_package/wiki

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numpy
    matplotlib

[options.packages.find]
where = src